[tool.poetry]
name = "penta-poetry-pytorch"
version = "0.1.0"
description = ""
authors = ["supplepentan"]
readme = "README.md"
packages = [{include = "penta_poetry_pytorch"}]

[tool.poetry.dependencies]
python = "^3.8"
torch = { url = "https://download.pytorch.org/whl/cu117/torch-1.13.0%2Bcu117-cp38-cp38-win_amd64.whl"}
torchvision = { url = "https://download.pytorch.org/whl/cu117/torchvision-0.14.0%2Bcu117-cp38-cp38-win_amd64.whl"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
